.vitepress/theme/style.css
/**
 * Customize default theme styling by overriding CSS variables:
 * https://github.com/vuejs/vitepress/blob/main/src/client/theme-default/styles/vars.css
 */

/**
 * Colors
 * -------------------------------------------------------------------------- */

/* Generated by gpt-4 */
.brand {
    --brand-100: #f1ebf6;
    --brand-200: #d8cbe4;
    --brand-300: #bfa8d1;
    --brand-400: #a685be;
    --brand-500: #8e63ac;
    --brand-600: #322641;
    --brand-700: #2a223a;
    --brand-800: #211d33;
    --brand-900: #19182c;
}

:root {
    --vp-c-brand: #8e63ac;
    --vp-c-brand-light: #a685be;
    --vp-c-brand-lighter: #bfa8d1;
    --vp-c-brand-lightest: #d8cbe4;
    --vp-c-brand-dark: #322641;
    --vp-c-brand-darker: #2a223a;
    --vp-c-brand-dimm: rgba(100, 108, 255, 0.08);
    --vp-sidebar-bg-color: #f1ebf6;
}

.curtain {
    display: none;
}

.dark {
    --vp-sidebar-bg-color: var(--vp-c-brand-dimm);
}

/**
 * Component: Button
 * -------------------------------------------------------------------------- */

:root {
    --vp-button-brand-border: var(--vp-c-brand-light);
    --vp-button-brand-text: var(--vp-c-white);
    --vp-button-brand-bg: var(--vp-c-brand);
    --vp-button-brand-hover-border: var(--vp-c-brand-light);
    --vp-button-brand-hover-text: var(--vp-c-white);
    --vp-button-brand-hover-bg: var(--vp-c-brand-light);
    --vp-button-brand-active-border: var(--vp-c-brand-light);
    --vp-button-brand-active-text: var(--vp-c-white);
    --vp-button-brand-active-bg: var(--vp-button-brand-bg);
}

/**
 * Component: Home
 * -------------------------------------------------------------------------- */

:root {
    --vp-home-hero-name-color: transparent;
    --vp-home-hero-name-background: -webkit-linear-gradient(
        120deg,
        #b27bc0,
        #884299
    );
}

@media (min-width: 640px) {
    :root {
        --vp-home-hero-image-filter: blur(56px);
    }
}

@media (min-width: 960px) {
    :root {
        --vp-home-hero-image-filter: blur(72px);
    }
}

/**
 * Component: Custom Block
 * -------------------------------------------------------------------------- */

:root {
    --vp-custom-block-tip-border: var(--vp-c-brand);
    --vp-custom-block-tip-text: var(--vp-c-brand-darker);
    --vp-custom-block-tip-bg: var(--vp-c-brand-dimm);
}

.dark {
    --vp-custom-block-tip-border: var(--vp-c-brand);
    --vp-custom-block-tip-text: var(--vp-c-brand-lightest);
    --vp-custom-block-tip-bg: var(--vp-c-brand-dimm);
}

/**
 * Component: Algolia
 * -------------------------------------------------------------------------- */

.DocSearch {
    --docsearch-primary-color: var(--vp-c-brand) !important;
}

/**
 * Component: Feature Boxes
 * -------------------------------------------------------------------------- */

.VPFeatures .items .icon {
    background-color: var(--vp-c-brand-lightest);
}

.VPFeatures .items .box {
    border-radius: 8px;
    background-color: var(--vp-sidebar-bg-color);
}

